@startuml

title Diagramme de Classes Détaillé - Système de Gestion Locative Blockchain

' Style
skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE

package "Modèles de Données" #E3F2FD {
  
  class User {
    +id: Integer {PK}
    +firstName: String
    +lastName: String
    +email: String {unique}
    +passwordHash: String
    +role: Enum(landlord, tenant)
    +blockchainAddress: String(42)
    +kycDocument: String
    +createdAt: DateTime
    +updatedAt: DateTime
    --
    +comparePassword(password): Boolean
    +toSafeObject(): Object
  }

  class Property {
    +id: Integer {PK}
    +ownerId: Integer {FK}
    +address: Text
    +type: String
    +area: Decimal(10,2)
    +photos: JSON
    +status: Enum(available, rented)
    +description: Text
    +monthlyRent: Decimal(10,2)
    +createdAt: DateTime
    +updatedAt: DateTime
  }

  class Contract {
    +id: Integer {PK}
    +propertyId: Integer {FK}
    +landlordId: Integer {FK}
    +tenantId: Integer {FK}
    +smartContractAddress: String(42)
    +paymentManagerAddress: String(42)
    +disputeManagerAddress: String(42)
    +rentAmount: Decimal(18,8)
    +durationMonths: Integer
    +paymentFrequency: String
    +depositAmount: Decimal(18,8)
    +terms: Text
    +status: Enum(draft, pending_signature, active, terminated)
    +landlordSigned: Boolean
    +tenantSigned: Boolean
    +startDate: Date
    +endDate: Date
    +createdAt: DateTime
    +updatedAt: DateTime
  }

  class Payment {
    +id: Integer {PK}
    +contractId: Integer {FK}
    +dueDate: Date
    +paidDate: Date
    +amount: Decimal(18,8)
    +penalty: Decimal(18,8)
    +status: Enum(pending, paid, overdue)
    +transactionHash: String(66)
    +paymentIndex: Integer
    +createdAt: DateTime
    +updatedAt: DateTime
  }

  class Dispute {
    +id: Integer {PK}
    +contractId: Integer {FK}
    +filedBy: Integer {FK}
    +description: Text
    +status: Enum(open, in_review, resolved, rejected)
    +resolution: Text
    +resolvedAt: DateTime
    +resolvedBy: Integer {FK}
    +disputeIndex: Integer
    +transactionHash: String(66)
    +createdAt: DateTime
    +updatedAt: DateTime
  }
}

package "Smart Contracts (Blockchain)" #FFF3E0 {
  
  class RentalContract <<Smart Contract>> {
    +landlord: address
    +tenant: address
    +rentAmount: uint256
    +depositAmount: uint256
    +durationMonths: uint256
    +propertyAddress: string
    +terms: string
    +landlordSigned: bool
    +tenantSigned: bool
    +isActive: bool
    +startDate: uint256
    +endDate: uint256
    --
    +signContract(): void
    +terminateContract(): void
    +getContractDetails(): ContractDetails
    +isContractActive(): bool
    --
    <<events>>
    ~ContractSigned(address signer)
    ~ContractActivated(uint256 startDate)
    ~ContractTerminated(address terminator)
  }

  class PaymentManager <<Smart Contract>> {
    +landlord: address
    +tenant: address
    +rentAmount: uint256
    +startDate: uint256
    +durationMonths: uint256
    +penaltyRate: uint256
    +gracePeriodDays: uint256
    +paymentCount: uint256
    --
    +makePayment(): void
    +calculatePenalty(paymentId): uint256
    +getPaymentStatus(paymentId): PaymentInfo
    +withdrawFunds(amount): void
    +getAllPayments(): PaymentInfo[]
    --
    <<events>>
    ~PaymentMade(uint256 paymentId, uint256 amount, uint256 penalty)
    ~FundsWithdrawn(address recipient, uint256 amount)
  }

  class DisputeManager <<Smart Contract>> {
    +landlord: address
    +tenant: address
    +arbitrator: address
    +disputeCount: uint256
    --
    +fileDispute(description): void
    +resolveDispute(disputeId, resolution): void
    +getDisputeDetails(disputeId): DisputeInfo
    +getDisputesByStatus(status): DisputeInfo[]
    +getAllDisputes(): DisputeInfo[]
    --
    <<events>>
    ~DisputeFiled(uint256 disputeId, address filedBy)
    ~DisputeResolved(uint256 disputeId, uint8 resolution)
  }
}

' Relations modèles de données
User "1" -- "0..*" Property : possède >
User "1" -- "0..*" Contract : propriétaire >
User "1" -- "0..*" Contract : locataire >
User "1" -- "0..*" Dispute : dépose >
Property "1" -- "0..*" Contract : a >
Contract "1" -- "0..*" Payment : génère >
Contract "1" -- "0..*" Dispute : contient >

' Relations avec Smart Contracts
Contract ..> RentalContract : déployé comme
Contract ..> PaymentManager : déployé comme
Contract ..> DisputeManager : déployé comme

note right of RentalContract
  Déployé sur la blockchain Ethereum
  Géré via Web3.js
  Adresse stockée dans Contract
end note

note bottom of User
  Authentification via JWT
  Mot de passe hashé avec bcrypt
  Role: landlord ou tenant
end note

@enduml
